generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider     = "mysql"
  url          = env("DATABASE_URL")
  relationMode = "prisma"
}

model Example {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model User {
  id            String     @id @default(cuid())
  name          String
  email         String?    @unique
  emailVerified DateTime?
  image         String?
  level         Int        @default(5)
  role          Role       @default(USER)
  teams         CitiTeam[] @relation("TeamMembers")
  accounts      Account[]
  sessions      Session[]
  createdBanks  Bank[]     @relation("BankMaker")
  checkedBanks  Bank[]     @relation("BankChecker")
  createdTeams  Broker[] @relation("TeamMaker")
  checkedTeams  Broker[] @relation("TeamChecker")
  createdBanksAudits BankAudit[]@relation("BankAuditMaker")
  checkedBankAudits BankAudit[]@relation("BankAuditChecker")
  createdTeamsAudits BrokerAudit[]@relation("BrokerAuditMaker")
  checkedTeamsAudits BrokerAudit[]@relation("BrokerAuditChecker")
  createdSSI    SSI[]      @relation("SSIMaker")
  checkedSSI    SSI[]      @relation("SSIChecker")
}

model CitiTeam {
  id        Int        @id @default(autoincrement())
  name      String
  members   User[]     @relation("TeamMembers")
  Brokers Broker[] @relation("BrokersToCitiTeam")
  BrokerAudits BrokerAudit[] @relation("BrokerAuditsCitiTeam")
  SSIs      SSI[]      @relation("SSIToCitiTeam")
}

model Bank {
  id          Int           @id @default(autoincrement())
  name        String        @unique
  image       String?
  website     String        @unique
  maker       String
  checker     String?
  amending    Boolean       @default(false)
  active      Boolean       @default(false)
  brokers       Broker[]    @relation("Brokers")
  makerUser   User          @relation("BankMaker", fields: [maker], references: [id])
  checkerUser User?         @relation("BankChecker", fields: [checker], references: [id])
  audits      BankAudit[]   @relation("BankAudits")
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt


  @@index([maker])
  @@index([checker])
}


model BankAudit {
  id        Int        @id @default(autoincrement())
  bank      Int
  maker     String
  checker   String?
  name      String?
  website   String?
  image     String?
  status    Status     @default(PENDING)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  bankId    Bank     @relation("BankAudits",fields: [bank], references: [id], onDelete: Cascade)
  makerUser User       @relation("BankAuditMaker", fields: [maker], references: [id])
  checkerUser User?    @relation("BankAuditChecker", fields: [checker], references: [id])

  @@index([bank])
  @@index([maker])
  @@index([checker])
}



model Broker {
  id            Int            @id @default(autoincrement())
  name          String         @unique
  maker         String
  checker       String?
  active        Boolean        @default(false)
  amending      Boolean        @default(false)
  bank          Int
  market        String
  assignedTeam  Int
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  ssis         SSI[]         @relation("SSIToBroker")
  audits       BrokerAudit[]  @relation("BrokerAudits")
  citiTeam      CitiTeam       @relation("BrokersToCitiTeam", fields: [assignedTeam], references: [id])
  contactEmails ContactEmail[] @relation("EmailToBroker")
  contactPhones ContactPhone[] @relation("PhoneToBroker")
  accounts      BrokerAccounts[] @relation("BrokerAccToBroker")
  bankId        Bank           @relation("Brokers", fields: [bank], references: [id])
  makerUser     User           @relation("TeamMaker", fields: [maker], references: [id])
  checkerUser   User?          @relation("TeamChecker", fields: [checker], references: [id])

  @@index([bank])
  @@index([maker])
  @@index([checker])
  @@index([assignedTeam])
}

model BrokerAudit {
  id        Int        @id @default(autoincrement())
  broker      Int
  maker     String
  checker   String?
  name      String?
  market   String?
  assignedTeam    Int?
  status    Status     @default(PENDING)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  citiTeam  CitiTeam?       @relation("BrokerAuditsCitiTeam",fields: [assignedTeam], references: [id])
  brokerId  Broker     @relation("BrokerAudits",fields: [broker], references: [id], onDelete: Cascade)
  makerUser User       @relation("BrokerAuditMaker", fields: [maker], references: [id])
  checkerUser User?    @relation("BrokerAuditChecker", fields: [checker], references: [id])

  @@index([broker])
  @@index([maker])
  @@index([checker])
  @@index([assignedTeam])
}

model BrokerAccounts {
    id            String     @id @default(cuid())
    account       String
    broker      Int 
    brokerId    Broker   @relation("BrokerAccToBroker",fields: [broker], references: [id], onDelete: Cascade)

    @@index([broker])
}

model ContactEmail {
  id         String   @id @default(cuid())
  email      String

  broker   Int
  brokerId Broker @relation("EmailToBroker",fields: [broker], references: [id])

  @@index([broker])
}

model ContactPhone {
  id         String   @id @default(cuid())
  phone      String
    name       String?
  broker   Int
  brokerId Broker @relation("PhoneToBroker",fields: [broker], references: [id])

  @@index([broker])
}

model SSI{
  id        String   @id @default(cuid())
  name      String
  currency  String
  field56Institution String?
  field57Institution String
  field57Account String
  field58Institution String?
  field58Account String?
  furtherCreditTo String?
  broker   Int
  assignedTeam  Int
  backup      String
  assignedFile File @relation("FileToSSI",fields: [backup], references: [id])
  citiTeam     CitiTeam       @relation("SSIToCitiTeam", fields: [assignedTeam], references: [id])
  brokerId    Broker   @relation("SSIToBroker",fields: [broker], references: [id])
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  maker     String
  checker   String?
  callback String?
  callbackId Callback? @relation("CallbackToSSI",fields: [callback], references: [id])
  status    Status     @default(PENDING)
  makerUser User       @relation("SSIMaker", fields: [maker], references: [id])
  checkerUser User?    @relation("SSIChecker", fields: [checker], references: [id])

  @@index([broker])
  @@index([assignedTeam])
  @@index([backup])
  @@index([maker])
  @@index([checker])
  @@index([callback])
}

model File{
    id        String   @id @default(cuid())
    ssis      SSI[]    @relation("FileToSSI")
    s3Id      String  @unique
    name      String @unique
    type      String
}

model Callback {
  id String @id @default(cuid())
  ssis SSI[] @relation("CallbackToSSI")
}

enum Role {
  USER
  MODERATOR
  ADMIN
}

enum Status {
  PENDING
  APPROVED
  REJECTED
}