//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Example {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique]
  emailVerified DateTime
  image String
  level Int [not null, default: 5]
  role Role [not null, default: 'USER']
  teams CitiTeam [not null]
  accounts Account [not null]
  sessions Session [not null]
  createdBanks Bank [not null]
  checkedBanks Bank [not null]
  createdTeams Broker [not null]
  checkedTeams Broker [not null]
  createdBanksAudits BankAudit [not null]
  checkedBankAudits BankAudit [not null]
  createdTeamsAudits BrokerAudit [not null]
  checkedTeamsAudits BrokerAudit [not null]
  createdSSI SSI [not null]
  checkedSSI SSI [not null]
}

Table CitiTeam {
  id Int [pk, increment]
  name String [not null]
  members User [not null]
  Brokers Broker [not null]
  BrokerAudits BrokerAudit [not null]
  SSIs SSI [not null]
}

Table Bank {
  id Int [pk, increment]
  name String [unique, not null]
  image String
  website String [unique, not null]
  maker String [not null]
  checker String
  amending Boolean [not null, default: false]
  active Boolean [not null, default: false]
  brokers Broker [not null]
  makerUser User [not null]
  checkerUser User
  audits BankAudit [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BankAudit {
  id Int [pk, increment]
  bank Int [not null]
  maker String [not null]
  checker String
  name String
  website String
  image String
  status Status [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  bankId Bank [not null]
  makerUser User [not null]
  checkerUser User
}

Table Broker {
  id Int [pk, increment]
  name String [unique, not null]
  maker String [not null]
  checker String
  active Boolean [not null, default: false]
  amending Boolean [not null, default: false]
  bank Int [not null]
  market String [not null]
  assignedTeam Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ssis SSI [not null]
  audits BrokerAudit [not null]
  citiTeam CitiTeam [not null]
  contactEmails ContactEmail [not null]
  contactPhones ContactPhone [not null]
  accounts BrokerAccounts [not null]
  bankId Bank [not null]
  makerUser User [not null]
  checkerUser User
}

Table BrokerAudit {
  id Int [pk, increment]
  broker Int [not null]
  maker String [not null]
  checker String
  name String
  market String
  assignedTeam Int
  status Status [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  citiTeam CitiTeam
  brokerId Broker [not null]
  makerUser User [not null]
  checkerUser User
}

Table BrokerAccounts {
  id String [pk]
  account String [not null]
  broker Int [not null]
  brokerId Broker [not null]
}

Table ContactEmail {
  id String [pk]
  email String [not null]
  broker Int [not null]
  brokerId Broker [not null]
}

Table ContactPhone {
  id String [pk]
  phone String [not null]
  name String
  broker Int [not null]
  brokerId Broker [not null]
}

Table SSI {
  id String [pk]
  name String [not null]
  currency String [not null]
  field56Institution String
  field57Institution String [not null]
  field57Account String [not null]
  field58Institution String
  field58Account String
  furtherCreditTo String
  broker Int [not null]
  assignedTeam Int [not null]
  backup String [not null]
  assignedFile File [not null]
  citiTeam CitiTeam [not null]
  brokerId Broker [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  maker String [not null]
  checker String
  callback String
  callbackId Callback
  status Status [not null, default: 'PENDING']
  makerUser User [not null]
  checkerUser User
}

Table File {
  id String [pk]
  ssis SSI [not null]
  s3Id String [unique, not null]
  name String [unique, not null]
  type String [not null]
}

Table Callback {
  id String [pk]
  ssis SSI [not null]
}

Enum Role {
  USER
  MODERATOR
  ADMIN
}

Enum Status {
  PENDING
  APPROVED
  REJECTED
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Bank.maker > User.id

Ref: Bank.checker > User.id

Ref: BankAudit.bank > Bank.id [delete: Cascade]

Ref: BankAudit.maker > User.id

Ref: BankAudit.checker > User.id

Ref: Broker.assignedTeam > CitiTeam.id

Ref: Broker.bank > Bank.id

Ref: Broker.maker > User.id

Ref: Broker.checker > User.id

Ref: BrokerAudit.assignedTeam > CitiTeam.id

Ref: BrokerAudit.broker > Broker.id [delete: Cascade]

Ref: BrokerAudit.maker > User.id

Ref: BrokerAudit.checker > User.id

Ref: BrokerAccounts.broker > Broker.id [delete: Cascade]

Ref: ContactEmail.broker > Broker.id

Ref: ContactPhone.broker > Broker.id

Ref: SSI.backup > File.id

Ref: SSI.assignedTeam > CitiTeam.id

Ref: SSI.broker > Broker.id

Ref: SSI.callback > Callback.id

Ref: SSI.maker > User.id

Ref: SSI.checker > User.id